feature: [WIP] Bakend for user profiles (#81)
