# Backend/Golang/server/openAPI3_desc.yaml
@@ -48,6 +48,30 @@ paths:
       responses:
         default:
           description: successful operation
+  /user/{username}:
+    get:
+      tags:
+        - user
+      summary: get a user
+      description: get a user
+      operationId: getUser
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
+          description: username of an user
+      responses:
+        '404':
+          description: User not found
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PublicUser'  
+
   /user/login:
     post:
       tags:
@@ -491,6 +515,33 @@ components:
             $ref: '#/components/schemas/LoginToken'
       xml:
         name: user
+
+    PublicUser:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 10
+        username:
+          type: string
+          example: theUser
+        fullname:
+          type: string
+          example: 'John Doe'
+        institution:
+          type: string
+          example: 'Universsity of Somewhere'
+        website:
+          type: string
+          example: 'https://website.com'
+        email:
+          type: string
+          example: john@email.com
+        bio:
+          type: string
+          example: "I am a enginner who likes cats."
+ 
     LoginToken:
       type: object
       properties:
@@ -521,18 +572,29 @@ components:
       required: 
         - "username"
         - "password"
-        - "email"
         - "captcha_token"
       properties:
         username:
           type: string
           example: theUser
+        bio:
+          type: string
+          example: "I am a enginner who likes cats."
         password:
           type: string
           example: "Userpass"
         email:
           type: string
           example: "a.b@c.d"
+        fullname:
+          type: string
+          example: 'John Doe'
+        institution:
+          type: string
+          example: 'Universsity of Somewhere'
+        website:
+          type: string
+          example: 'https://website.com'
         captcha_token:
           type: string
       xml:
